--- a/custom_addons/app_one/views/views.xml
+++ b/custom_addons/app_one/views/views.xml
@@ -1,5 +1,28 @@
 <odoo>
-  <data>
+    <record id="property_tree_view" model="ir.ui.view">
+        <field name="name"> property tree </field>
+        <field name="model">property</field>
+        <field name="arch" type="xml">
+        <tree>
+          <field name="name"/>
+          <field name="date_availability"/>
+          <field name="selling_price"/>
+          <field name="garden"/>
+        </tree>
+        </field>
+
+    </record>
+    <record id="property_action" model="ir.actions.act_window">
+        <field name ="name"> property action</field>
+        <field name ="res_model">property</field>
+    </record>
+    <menuitem
+        id="properties_menu_item"
+        name="Properties"
+        parent = "properties_menu"
+        action = "property_action"
+        />
+  <!-- <data> -->
     <!-- explicit list view definition -->
 <!--
     <record model="ir.ui.view" id="/opt/odoo15/addons/custom/tutorials_tasks/school.list">
@@ -56,5 +79,5 @@
     <menuitem name="Server to list" id="/opt/odoo15/addons/custom/tutorials_tasks/school" parent="/opt/odoo15/addons/custom/tutorials_tasks/school.menu_2"
               action="/opt/odoo15/addons/custom/tutorials_tasks/school.action_server"/>
 -->
-  </data>
+ 
 </odoo>
